<resources>
    <string name="app_name">FitPro</string>
    <string name="q1">What is your goal?</string>
    <string name="q11">Lose weight</string>
    <string name="q12">Maintain weight</string>
    <string name="q13">Gain weight</string>

    <string name="q2">How active are you?</string>
    <string name="q21">Not very active</string>
    <string name="q22">Lightly Active</string>
    <string name="q23">Active</string>
    <string name="q24">Very Active</string>

    <string name="q3">Gender</string>
    <string name="q31">Male</string>
    <string name="q32">Female</string>

    <string name="unit">Unit</string>
    <string name="kg">Metric Unit(kg,cm)</string>
    <string name="lb">Imperial Unit(lb,in)</string>

    <string name="q4">Height</string>
    <string name="h">Enter Height</string>

    <string name="q5">Current Weight</string>
    <string name="cwt">Enter Current Weight</string>

    <string name="gwt">Enter Goal Weight</string>
    <string name="q6">Goal Weight</string>

    <string name="submit">Submit</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_log_in">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FitPro</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_exercise">Exercises</string>
    <string name="title_activity_progress">Progress</string>
    <string name="title_activity_stats">BMI Calculator</string>
    <string name="title_activity_reminder">Reminder</string>


    <string name="h1">Enter your weight</string>
    <string name="h2">Enter your height</string>
    <string name="t1">Calculate</string>
    <string name="gen">Gender:</string>
    <string name="m">Male</string>
    <string name="f">Female</string>

    <string name="bmi">TextView for bmi</string>
    <string name="result">TextView for result</string>
    <string name="gend">Gender is </string>
    <string name="title_activity_addplan">Add Meal</string>
</resources>
